# bchcwasm

./: Makefile  config.yml  go.mod  go.sum  readme.md
app/: app.go  app_config.go  sim_test.go
cmd/bchcwasmd/: main.go
cmd/bchcwasmd/cmd/: commands.go  root.go  testnet.go  testnet_multi_node.go
docs/static/: openapi.json
empty-contract/: Cargo.toml
empty-contract/src/: lib.rs
hello-contract/: Cargo.toml
hello-contract/artifacts/: checksums.txt  hello_contract.wasm
hello-contract/src/: lib.rs
patient_contract/: Cargo.toml
patient_contract/artifacts/: checksums.txt  patient_contract.wasm
patient_contract/src/: lib.rs  lib.rs.old  msg.rs  msg.rs.old  state.rs
proto/bchcwasm/bchcwasm/module/v1/: module.proto
proto/bchcwasm/bchcwasm/v1/: genesis.proto  params.proto  query.proto  tx.proto
x/bchcwasm/keeper/: genesis.go  genesis_test.go  keeper.go  keeper_test.go  msg_server.go  msg_update_params.go  msg_update_params_test.go  query.go  query_params.go  query_params_test.go
x/bchcwasm/module/: autocli.go  depinject.go  module.go  simulation.go
x/bchcwasm/types/: errors.go  genesis.pb.go  genesis_test.go  keys.go  module.pb.go  params.pb.go  query.pb.go  query.pb.gw.go  tx.pb.go
