[package]
name = "patient-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.3.4"
cw-storage-plus = "1.0.1"
base64ct = "=1.7.3"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
cosmwasm-schema = "1.3.4"

[features]
default = []